<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home_learn_material">

    <fragment
        android:id="@+id/navigation_home_learn_material"
        android:name="com.elearningcourse.e_learningapp.ui.learn.LearnFragment"
        android:label="@string/title_learning_material"
        tools:layout="@layout/fragment_learn">

        <action
            android:id="@+id/action_fragment_learn_to_unit_selection_fragment"
            app:destination="@id/navigation_select_unit"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim">

        </action>

    </fragment>

    <fragment
        android:id="@+id/navigation_questions_answers"
        android:name="com.elearningcourse.e_learningapp.ui.test.TestFragment"
        android:label="@string/title_test_material"
        tools:layout="@layout/fragment_test">

    </fragment>

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.elearningcourse.e_learningapp.ui.stats.StatsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stats">

    </fragment>

    <fragment
        android:id="@+id/navigation_select_unit"
        android:name="com.elearningcourse.e_learningapp.ui.learn.units.UnitSelection"
        android:label="@string/unit_selection">

        <action
            android:id="@+id/action_fragment_unit_selection_to_first_unit_fragment"
            app:destination="@id/first_unit"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_pop_exit_anim">

        </action>

    </fragment>

    <fragment
        android:id="@+id/first_unit"
        android:name="com.elearningcourse.e_learningapp.ui.learn.units.firstUnit.FirstUnit"
        android:label="@string/first_unit">

    </fragment>

</navigation>